--- a/index.html
+++ b/index.html
@@ -1,37 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gita Wisdom - Privacy Policy & Terms of Service</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Gita Wisdom - Privacy Policy & Terms of Service</title>
+
+  <style>
+    /* Base styles */
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #f5f7fa, #c3cfe2);
+      margin: 0;
+      padding: 0;
+      color: #2c3e50;
+      transition: background 0.3s, color 0.3s;
+    }
+
+    .container {
+      max-width: 850px;
+      margin: 80px auto;
+      padding: 40px;
+      background-color: white;
+      border-radius: 16px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+      animation: fadeIn 1s ease-out;
+    }
+
+    h1, h2 {
+      color: #1a237e;
+    }
+
+    h1 {
+      font-size: 2rem;
+      border-bottom: 2px solid #1a237e;
+      padding-bottom: 10px;
+      margin-bottom: 30px;
+    }
+
+    h2 {
+      font-size: 1.5rem;
+      margin-top: 30px;
+      margin-bottom: 15px;
+    }
+
+    p, li {
+      font-size: 1rem;
+      line-height: 1.7;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    a {
+      color: #3949ab;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      margin-top: 40px;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #555;
+      border-top: 1px solid #ddd;
+      padding-top: 20px;
+    }
+
+    /* Theme toggle button */
+    #theme-toggle {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      padding: 10px 15px;
+      border-radius: 8px;
+      border: none;
+      background-color: #1a237e;
+      color: white;
+      cursor: pointer;
+      z-index: 1000;
+    }
+
+    /* Dark Mode */
+    .dark-mode {
+      background: #121212;
+      color: #f1f1f1;
+    }
+
+    .dark-mode .container {
+      background: #1e1e1e;
+      color: #f1f1f1;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.4);
+    }
+
+    .dark-mode a {
+      color: #90caf9;
+    }
+
+    /* Fade animation */
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @media (max-width: 600px) {
+      .container {
+        padding: 20px;
+        margin: 20px;
+      }
+
+      h1 {
+        font-size: 1.5rem;
+      }
+
+      h2 {
+        font-size: 1.2rem;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Gita Wisdom - Privacy Policy & Terms of Service</h1>
-        <div class="section">
-            <h2>Privacy Policy</h2>
-            <p>We value your privacy. This Privacy Policy outlines how we handle your data:</p>
-            <ul>
-                <li><strong>Data Collection:</strong> We may collect user IDs, server information, and messages for functionality purposes.</li>
-                <li><strong>Data Usage:</strong> Data is used solely to provide and improve the bot's services.</li>
-                <li><strong>Third-Party Sharing:</strong> We do not share your data with third parties.</li>
-                <li><strong>Data Deletion:</strong> Contact us at <a href="https://discord.com/invite/JUJGmAeBrq">Support server</a> to request data deletion.</li>
-            </ul>
-        </div>
-        <div class="section">
-            <h2>Terms of Service</h2>
-            <p>By using our bot, you agree to the following terms:</p>
-            <ul>
-                <li>The bot is provided "as is" without warranties of any kind.</li>
-                <li>You must be 13 years or older to use the bot.</li>
-                <li>Misuse of the bot may result in bans or other actions.</li>
-                <li>We are not liable for any damages resulting from the bot's use.</li>
-            </ul>
-        </div>
-        <footer>
-            <p>Contact us at <a href="https://discord.com/invite/JUJGmAeBrq">Support server</a> for more information.</p>
-        </footer>
+  <button id="theme-toggle">🌙 Toggle Dark Mode</button>
+
+  <div class="container">
+    <h1>Gita Wisdom - Privacy Policy & Terms of Service</h1>
+
+    <div class="section">
+      <h2>Privacy Policy</h2>
+      <p>We value your privacy. This Privacy Policy outlines how we handle your data:</p>
+      <ul>
+        <li><strong>Data Collection:</strong> We may collect user IDs, server information, and messages for functionality purposes.</li>
+        <li><strong>Data Usage:</strong> Data is used solely to provide and improve the bot's services.</li>
+        <li><strong>Third-Party Sharing:</strong> We do not share your data with third parties.</li>
+        <li><strong>Data Deletion:</strong> Contact us at <a href="https://discord.com/invite/JUJGmAeBrq">Support server</a> to request data deletion.</li>
+      </ul>
     </div>
+
+    <div class="section">
+      <h2>Terms of Service</h2>
+      <p>By using our bot, you agree to the following terms:</p>
+      <ul>
+        <li>The bot is provided "as is" without warranties of any kind.</li>
+        <li>You must be 13 years or older to use the bot.</li>
+        <li>Misuse of the bot may result in bans or other actions.</li>
+        <li>We are not liable for any damages resulting from the bot's use.</li>
+      </ul>
+    </div>
+
+    <footer>
+      <p>Contact us at <a href="https://discord.com/invite/JUJGmAeBrq">Support server</a> for more information.</p>
+    </footer>
+  </div>
+
+  <script>
+    const toggle = document.getElementById('theme-toggle');
+    toggle.addEventListener('click', () => {
+      document.body.classList.toggle('dark-mode');
+    });
+  </script>
 </body>
 </html>
