--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
   <title>Gita Wisdom - Privacy Policy & Terms of Service</title>
 
   <style>
-    /* Base styles */
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #f5f7fa, #c3cfe2);
+      background: #121212;
       margin: 0;
       padding: 0;
-      color: #2c3e50;
+      color: #f1f1f1;
       transition: background 0.3s, color 0.3s;
     }
 
@@ -20,19 +19,19 @@
       max-width: 850px;
       margin: 80px auto;
       padding: 40px;
-      background-color: white;
+      background-color: #1e1e1e;
       border-radius: 16px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.4);
       animation: fadeIn 1s ease-out;
     }
 
     h1, h2 {
-      color: #1a237e;
+      color: #ffffff;
     }
 
     h1 {
       font-size: 2rem;
-      border-bottom: 2px solid #1a237e;
+      border-bottom: 2px solid #90caf9;
       padding-bottom: 10px;
       margin-bottom: 30px;
     }
@@ -53,7 +52,7 @@
     }
 
     a {
-      color: #3949ab;
+      color: #90caf9;
       text-decoration: none;
       font-weight: 500;
     }
@@ -66,12 +65,11 @@
       margin-top: 40px;
       text-align: center;
       font-size: 0.9rem;
-      color: #555;
-      border-top: 1px solid #ddd;
+      color: #ccc;
+      border-top: 1px solid #333;
       padding-top: 20px;
     }
 
-    /* Theme toggle button */
     #theme-toggle {
       position: fixed;
       top: 20px;
@@ -79,29 +77,38 @@
       padding: 10px 15px;
       border-radius: 8px;
       border: none;
-      background-color: #1a237e;
+      background-color: #3949ab;
       color: white;
       cursor: pointer;
       z-index: 1000;
     }
 
-    /* Dark Mode */
-    .dark-mode {
-      background: #121212;
-      color: #f1f1f1;
+    /* Light Mode Styles */
+    body:not(.dark-mode) {
+      background: linear-gradient(to right, #f5f7fa, #c3cfe2);
+      color: #2c3e50;
     }
 
-    .dark-mode .container {
-      background: #1e1e1e;
-      color: #f1f1f1;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.4);
+    body:not(.dark-mode) .container {
+      background-color: white;
+      color: #2c3e50;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
     }
 
-    .dark-mode a {
-      color: #90caf9;
+    body:not(.dark-mode) h1, 
+    body:not(.dark-mode) h2 {
+      color: #1a237e;
     }
 
-    /* Fade animation */
+    body:not(.dark-mode) a {
+      color: #3949ab;
+    }
+
+    body:not(.dark-mode) footer {
+      color: #555;
+      border-color: #ddd;
+    }
+
     @keyframes fadeIn {
       from {
         opacity: 0;
@@ -129,8 +136,8 @@
     }
   </style>
 </head>
-<body>
-  <button id="theme-toggle">🌙 Toggle Dark Mode</button>
+<body class="dark-mode">
+  <button id="theme-toggle">🌙 Toggle Light Mode</button>
 
   <div class="container">
     <h1>Gita Wisdom - Privacy Policy & Terms of Service</h1>
@@ -166,6 +173,9 @@
     const toggle = document.getElementById('theme-toggle');
     toggle.addEventListener('click', () => {
       document.body.classList.toggle('dark-mode');
+      toggle.textContent = document.body.classList.contains('dark-mode') 
+        ? '🌙 Toggle Light Mode' 
+        : '☀️ Toggle Dark Mode';
     });
   </script>
 </body>
